# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
brain_games/: cli.py  game_even.py
brain_games/games/: game.py  game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_prog.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games_intro.py  brain_gcd.py  brain_prime.py  brain_prog.py
