[tool.poetry]
name = "hexlet-code"
version = "1.0.0"
description = "Hexlet studing project - Brain Games"
authors = ["eugene.yuriev <juriev_gek@mail.ru>"]
packages = [
    { include = 'brain_games' },
]
classifiers = ["Environment :: Console"]
repository = "https://github.com/EugeneY1984/python-project-lvl1.git"


[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games_intro:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_prog:main"
brain-prime = "brain_games.scripts.brain_prime:main"